protox-parse/src/snapshots/protox_parse__tests__field_default_value.snap
---
source: protox-parse/src/tests.rs
expression: "parse(r#\"\n        message Message {\n            optional Message foo = 1 [default = \"\"];\n        }\"#)"
---
Ok(
    FileDescriptorProto {
        name: Some(
            "test.proto",
        ),
        package: None,
        dependency: [],
        public_dependency: [],
        weak_dependency: [],
        message_type: [
            DescriptorProto {
                name: Some(
                    "Message",
                ),
                field: [
                    FieldDescriptorProto {
                        name: Some(
                            "foo",
                        ),
                        number: Some(
                            1,
                        ),
                        label: Some(
                            Optional,
                        ),
                        r#type: None,
                        type_name: Some(
                            "Message",
                        ),
                        extendee: None,
                        default_value: Some(
                            "\"\"",
                        ),
                        oneof_index: None,
                        json_name: Some(
                            "foo",
                        ),
                        options: None,
                        proto3_optional: None,
                    },
                ],
                extension: [],
                nested_type: [],
                enum_type: [],
                extension_range: [],
                oneof_decl: [],
                options: None,
                reserved_range: [],
                reserved_name: [],
            },
        ],
        enum_type: [],
        service: [],
        extension: [],
        options: None,
        source_code_info: Some(
            SourceCodeInfo {
                location: [
                    Location {
                        path: [],
                        span: [
                            1,
                            8,
                            3,
                            9,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                        ],
                        span: [
                            1,
                            8,
                            3,
                            9,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            1,
                        ],
                        span: [
                            1,
                            16,
                            23,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                        ],
                        span: [
                            2,
                            12,
                            52,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            1,
                        ],
                        span: [
                            2,
                            29,
                            32,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            3,
                        ],
                        span: [
                            2,
                            35,
                            36,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            4,
                        ],
                        span: [
                            2,
                            12,
                            20,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            6,
                        ],
                        span: [
                            2,
                            21,
                            28,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            7,
                        ],
                        span: [
                            2,
                            48,
                            50,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            8,
                        ],
                        span: [
                            2,
                            37,
                            51,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                ],
            },
        ),
        syntax: None,
    },
)
