protox-parse/src/snapshots/protox_parse__tests__invalid_message_number-2.snap
---
source: protox-parse/src/tests.rs
expression: "parse(\"message Foo { optional int32 i = 536870911; }\")"
---
Ok(
    FileDescriptorProto {
        name: None,
        package: None,
        dependency: [],
        public_dependency: [],
        weak_dependency: [],
        message_type: [
            DescriptorProto {
                name: Some(
                    "Foo",
                ),
                field: [
                    FieldDescriptorProto {
                        name: Some(
                            "i",
                        ),
                        number: Some(
                            536870911,
                        ),
                        label: Some(
                            Optional,
                        ),
                        r#type: Some(
                            Int32,
                        ),
                        type_name: None,
                        extendee: None,
                        default_value: None,
                        oneof_index: None,
                        json_name: Some(
                            "i",
                        ),
                        options: None,
                        proto3_optional: None,
                    },
                ],
                extension: [],
                nested_type: [],
                enum_type: [],
                extension_range: [],
                oneof_decl: [],
                options: None,
                reserved_range: [],
                reserved_name: [],
            },
        ],
        enum_type: [],
        service: [],
        extension: [],
        options: None,
        source_code_info: Some(
            SourceCodeInfo {
                location: [
                    Location {
                        path: [],
                        span: [
                            0,
                            0,
                            45,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                        ],
                        span: [
                            0,
                            0,
                            45,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            1,
                        ],
                        span: [
                            0,
                            8,
                            11,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                        ],
                        span: [
                            0,
                            14,
                            43,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            1,
                        ],
                        span: [
                            0,
                            29,
                            30,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            3,
                        ],
                        span: [
                            0,
                            33,
                            42,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            4,
                        ],
                        span: [
                            0,
                            14,
                            22,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                    Location {
                        path: [
                            4,
                            0,
                            2,
                            0,
                            5,
                        ],
                        span: [
                            0,
                            23,
                            28,
                        ],
                        leading_comments: None,
                        trailing_comments: None,
                        leading_detached_comments: [],
                    },
                ],
            },
        ),
        syntax: None,
    },
)
